--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,6 +1,6 @@
 /* Centers the whole page content */
 .home-container {
-    text-align: center; /* This centers the Title and Search Bar */
+    text-align: center; 
 }
 
 
@@ -11,7 +11,7 @@
     --outline-color: #000000;
 }
 
-/* 1. The Grid Container */
+/* 1. The Grid Container for each event*/
 .events-grid {
     display: flex;
     flex-wrap: wrap;
@@ -35,7 +35,7 @@
     box-sizing: border-box;
     overflow: hidden;
 
-    /* Simple Tilt - No complex math */
+    /* Simple Tilt */
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     transform: rotate(-3deg);
     
@@ -54,6 +54,7 @@
 }
 
 /* Contents */
+/* the entire event grid is clickable */
 .event-link {
     display: flex;
     flex-direction: column;
