created Footer page to display on every page, and make sure pages have match styles

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -4,7 +4,7 @@
 }
 
 
-/* varialbes for reuse */
+/* varialbes for reuse in other css files*/
 :root {
     --accent-gold: #ffcc00;
     --card-bg: #ffffff;
@@ -28,7 +28,7 @@
 .event-card-wrapper {
     background: white; 
     border: 4px solid var(--outline-color);
-    border-radius: 4px; /* Sharper corners for brutalist look */
+    border-radius: 4px; 
     width: 300px;
     min-height: 400px;
     position: relative;
