--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -40,6 +40,7 @@
 .nav-links a:hover {
     background-color: var(--accent-gold);
     border: 3px solid black;
+    border-radius: 4px; 
     box-shadow: 4px 4px 0px black; 
 }
 
@@ -47,12 +48,13 @@
 .user-section {
     display: flex;
     align-items: center;
-    gap: 15px;
+    gap: 40px;
     padding-left: 20px;
 }
 
 .username {
     font-weight: 700;
+        text-transform: uppercase;
 }
 
 .logout-btn {
