--- a/src/pages/CreateEvent.css
+++ b/src/pages/CreateEvent.css
@@ -11,8 +11,13 @@
 }
 
 .create-event-card {
-    width: 100%;
-    max-width: 450px; 
+    background: white;
+    border: 4px solid black;
+    padding: 2rem;     
+    box-shadow: 8px 8px 0px black;
+    width: fit-content;
+    height: auto;     
+    border-radius: 4px; 
 }
 
 .create-event-card h1 {
@@ -87,11 +92,3 @@
     transform: translate(4px, 4px);
     box-shadow: 0px 0px 0px black;
 }
-/* 
-@media (min-width: 2200px) {
-    .event-form-group {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        gap: 15px;
-    }
-} */
