clean up on the style more to match each page

--- a/src/pages/CreateEvent.css
+++ b/src/pages/CreateEvent.css
@@ -2,18 +2,16 @@
     display: flex;
     flex-direction: column;
     align-items: center; 
-    
-    justify-content: flex-start; 
-    
-    padding: 20px; 
-    min-height: 100vh;
+    justify-content:space-around;
+    padding: 20px 100px; 
     box-sizing: border-box;
+
 }
 
 .create-event-card {
     background: white;
     border: 4px solid black;
-    padding: 2rem;     
+    padding: 2rem 5rem;     
     box-shadow: 8px 8px 0px black;
     width: fit-content;
     height: auto;     
@@ -24,7 +22,7 @@
     font-family: 'Archivo Black', sans-serif;
     text-transform: uppercase;
     margin-bottom: 25px;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     border-bottom: 4px solid black;
     display: inline-block;
     padding-bottom: 5px;
@@ -35,6 +33,7 @@
     display: flex;
     flex-direction: column;
     gap: 8px;
+    border-radius: 4px;
 }
 
 .event-form-group label {
@@ -53,6 +52,7 @@
     font-size: 1rem;
     outline: none;
     background: white;
+    border-radius: 4px;
 }
 
 .event-form-group textarea {
@@ -73,12 +73,13 @@
     border: 3px solid black;
     color: black;
     font-weight: bold;
-    font-size: 1.2rem;
+    font-size: 1rem;
     text-transform: uppercase;
     cursor: pointer;
     box-shadow: 6px 6px 0px black;
     transition: all 0.1s;
     margin-top: 10px;
+    border-radius: 4px;
 }
 
 .submit-event-btn:hover {
