--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 10rem;
+    padding: 4rem;
     box-sizing: border-box;
 }
 
@@ -19,11 +19,14 @@
     border-radius: 4px; 
 }
 
-.login-card h1 {
-    margin-top: 0;
-    font-family: 'Archivo Black', sans-serif; 
+.login-card h2 {
+    font-family: 'Archivo Black', sans-serif;
     text-transform: uppercase;
-    font-size: 1.8rem;
+    margin-bottom: 25px;
+    font-size: 1。2rem;
+    border-bottom: 4px solid black;
+    display: inline-block;
+    padding-bottom: 5px;
 }
 
 .form-group {
@@ -46,6 +49,7 @@
     border: 3px solid black;
     font-size: 1rem;
     outline: none;
+    border-radius: 4px;
 }
 
 .form-group input:focus {
@@ -58,10 +62,11 @@
     background: #FFCC00; /* Your Seattle gold color */
     border: 3px solid black;
     font-weight: bold;
-    font-size: 1.1rem;
+    font-size: 1rem;
     cursor: pointer;
     box-shadow: 4px 4px 0px black;
     transition: all 0.1s;
+    border-radius: 4px;
 }
 
 .login-button:hover {
