--- a/src/pages/EventDetails.css
+++ b/src/pages/EventDetails.css
@@ -6,6 +6,7 @@
     border: 4px solid black;
     box-shadow: 10px 10px 0px black;
     border-radius: 4px;
+    font-size: 1.2rem;
 }
 
 
@@ -25,17 +26,15 @@
     padding: 5px 10px;
 }
 
-.event-meta {
-    font-weight: 800;
-    text-transform: uppercase;
-    border-bottom: 2px solid black;
-    padding-bottom: 10px;
-    margin-bottom: 20px;
-}
 
-.review-item {
-    border-left: 5px solid var(--accent-gold);
+
+.reviews-list {
     padding-left: 15px;
     margin-bottom: 20px;
-    background: #fafafa;
+} 
+
+.review-individual {
+    height: auto;     
+    border-radius: 4px; 
 }
+
