--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -25,8 +25,8 @@
     margin-bottom: 25px;
     font-size: 1。2rem;
     border-bottom: 4px solid black;
-    display: inline-block;
-    padding-bottom: 5px;
+    display: block;
+    padding-bottom: 2px;
 }
 
 .form-group {
